Fix cta section overflow size

--- a/style.css
+++ b/style.css
@@ -150,6 +150,7 @@ ul {
 
 .raninforcontainer {
     display: flex;
+    gap: 7px;
     flex-direction: column;
     flex-wrap: wrap;
     width: 150px;
@@ -180,10 +181,27 @@ ul {
     border: 2px solid white;
 }
 
-.calltoaction {
+.ctabackground {
+    display: flex;
+    justify-self: center;
+}
+
+/* .calltoaction {
+    width: 1050px;
+    height: 135px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 55px 100px;
-    margin: 115px auto 125px;
+    justify-content: space-around;
+    align-items: center;
+    margin: 135px auto 140px;
+    padding: 55px 100px; 
+} */
+
+.calltoaction {
+    display: flex;
+    flex: auto;
+    flex-wrap: wrap;
+    justify-content: space-around; 
+    margin: 135px auto 140px;
+    padding: 35px 0px;
 }
